fixed an issue with spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,6 @@ button {
   border: none;
   background: #3a7999;
   color: #f2f2f2;
-  padding: 2%;
   font-size: 18px;
   border-radius: 5px;
   position: relative;
